cmake_minimum_required (VERSION 3.8)

project (LearnCPP)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_CXX_EXTENSIONS FALSE)

set(LEARNCPP_VERSION_MAJOR 1)
set(LEARNCPP_VERSION_MINOR 0)
set(LEARNCPP_VERSION_PATCH 0)

add_subdirectory(SumCalculator)
add_subdirectory(IntegerLimits)
add_subdirectory(CIntegerLimits)
add_subdirectory(Overflow)
add_subdirectory(FloatLimits)
add_subdirectory(Accuracies)
add_subdirectory(Inaccuracy)
add_subdirectory(MathExpressions)
add_subdirectory(IsCharSigned)
add_subdirectory(Scopes)
add_subdirectory(RomNum)
add_subdirectory(GCD)
add_subdirectory(Prime)
add_subdirectory(FacCalculator)
add_subdirectory(Menu)
add_subdirectory(Enum)
add_subdirectory(Struct)