cmake_minimum_required (VERSION 3.8)

project (LearnCPP)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_CXX_EXTENSIONS FALSE)

add_subdirectory(SumCalculator)
add_subdirectory(IntegerLimits)
add_subdirectory(CIntegerLimits)
add_subdirectory(Overflow)
add_subdirectory(FloatLimits)
add_subdirectory(Accuracies)
add_subdirectory(Inaccuracy)
add_subdirectory(MathExpressions)
add_subdirectory(IsCharSigned)
add_subdirectory(Scopes)
add_subdirectory(RomNum)
add_subdirectory(GCD)
add_subdirectory(Prime)
add_subdirectory(FacCalculator)
add_subdirectory(Menu)
add_subdirectory(Enum)
add_subdirectory(Struct)
add_subdirectory(Vector)
add_subdirectory(DynamicVector)
add_subdirectory(StringOperations)
add_subdirectory(Auto)
add_subdirectory(StructBinding)
add_subdirectory(Union)
add_subdirectory(BitField)
add_subdirectory(Input)
add_subdirectory(FileIO)
add_subdirectory(FileCopy)
add_subdirectory(BoolAlpha)
add_subdirectory(ANSIESC)
add_subdirectory(Hex2float)
add_subdirectory(IfInitialization)
add_subdirectory(IntTypes)
add_subdirectory(ForEachLoops)
add_subdirectory(FacCalculator2)