cmake_minimum_required (VERSION 3.8)

project (LearnCPP)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_CXX_EXTENSIONS FALSE)

add_subdirectory(SumCalculator)
add_subdirectory(IntegerLimits)
add_subdirectory(CIntegerLimits)
add_subdirectory(Overflow)
add_subdirectory(FloatLimits)
add_subdirectory(Accuracies)
add_subdirectory(Inaccuracy)
add_subdirectory(MathExpressions)
add_subdirectory(IsCharSigned)
add_subdirectory(Scopes)
add_subdirectory(RomNum)
add_subdirectory(GCD)
add_subdirectory(Prime)
add_subdirectory(FacCalculator)
add_subdirectory(Menu)
add_subdirectory(Enum)
add_subdirectory(Struct)
add_subdirectory(Vector)
add_subdirectory(DynamicVector)
add_subdirectory(StringOperations)
add_subdirectory(Auto)
add_subdirectory(StructBinding)
add_subdirectory(Union)
add_subdirectory(BitField)
add_subdirectory(Input)
add_subdirectory(FileIO)
add_subdirectory(FileCopy)
add_subdirectory(BoolAlpha)
add_subdirectory(ANSIESC)
add_subdirectory(Hex2float)
add_subdirectory(IfInitialization)
add_subdirectory(IntTypes)
add_subdirectory(ForEachLoops)
add_subdirectory(FacCalculator2)
add_subdirectory(Scopes2)
add_subdirectory(Static)
add_subdirectory(ByValue)
add_subdirectory(DigitSumCalculatorWithRecursion)
add_subdirectory(TowersOfHanoiWithRecursion)
add_subdirectory(ByReference)
add_subdirectory(Price)
add_subdirectory(FunctionOverloading)
add_subdirectory(Macros)
add_subdirectory(GCCVersion)
add_subdirectory(HasInclude)
add_subdirectory(Macros2)
add_subdirectory(Namespaces)
add_subdirectory(Constexpr)
add_subdirectory(Constexprauto)
add_subdirectory(BiggestValueWithTemplates)
add_subdirectory(BiggestValueWithSpecialisedTemplates)
add_subdirectory(Smaller)
add_subdirectory(Place)
add_subdirectory(PlaceWithCopyconstructor)
add_subdirectory(SequenceConstructor)
add_subdirectory(constexprConstructorAndMethods)
add_subdirectory(Rational)
add_subdirectory(Destructor)
add_subdirectory(PersonnelAdministration)
add_subdirectory(IterateCArray)
add_subdirectory(CStrArray)
add_subdirectory(MainParameters)
add_subdirectory(This)
add_subdirectory(2DMatrix)
add_subdirectory(OutputTable)
add_subdirectory(Array2D)
add_subdirectory(WriteBinaryFile)
add_subdirectory(ReadBinaryFile)
add_subdirectory(WriteBinaryFile2)
add_subdirectory(FunctionPointer)
add_subdirectory(QSort)
add_subdirectory(Typedef)
add_subdirectory(UniquePointer)
add_subdirectory(String)
add_subdirectory(StringView)
add_subdirectory(NumObj)
add_subdirectory(ClassWithConstants)
add_subdirectory(SimulateStack)
add_subdirectory(Inheritance)
add_subdirectory(InheritConstructor)
add_subdirectory(AbstractInheritance)
add_subdirectory(VirtualDestructor)
add_subdirectory(PrivateVirtualFunctions)
add_subdirectory(VirtualBaseClass)
add_subdirectory(Cast)
add_subdirectory(TypeID)
add_subdirectory(PrivateInheritance)
add_subdirectory(Exstream)
add_subdirectory(LogicError)
add_subdirectory(Division0)
add_subdirectory(NewHandler)
add_subdirectory(OperatorOverloading)
add_subdirectory(SimulateVector)
add_subdirectory(MathVector)
add_subdirectory(SmartPointer)
add_subdirectory(FunctionObject)
add_subdirectory(NewOverloading)
add_subdirectory(CountMemoryManagement)